# comcli-rs

./: Cargo.toml  subspace.yaml
src/: global.rs  main.rs
src/cli/: mod.rs  top_level.rs
src/cli/commands/: add_profit_shares.rs  mod.rs  register.rs  stake.rs  stats.rs  transfer.rs  unstake.rs  update_module.rs  update_subnet.rs
src/types/: account_id.rs  api_key.rs  base64_bytes.rs  crypto_hash.rs  file_bytes.rs  ft_properties.rs  json.rs  mod.rs  near_token.rs  path_buf.rs  public_key.rs  public_key_list.rs  secret_key.rs  signature.rs  signed_delegate_action.rs  signed_transaction.rs  slip10.rs  transaction.rs  url.rs  vec_string.rs
src/utils_command/: mod.rs
src/utils_command/generate_keypair_subcommand/: mod.rs
wix/: main.wxs
